Avoid overflow content in a widget
We may want to think about whether resizing and designing a dashboard is
important

--- a/src/styles/ml-analytics-dashboard-custom.css
+++ b/src/styles/ml-analytics-dashboard-custom.css
@@ -9,6 +9,10 @@
   width: auto;
 }
 
+.widget {
+  overflow: scroll;
+}
+
 .text-muted {
   color: #777;
 }
